  Schneider).
- The command line option --updindex is now deprecated. If it is given, the index file will
  be generated completely new, as if --genindex had been given.
- Combined cRecorder::GetLastPts() and cFileName->GetLastPatPmtVersions(). GetLastPatPmtVersions()
  is now deprecated and will be removed in a future version. Contact vdr@tvdr.de if your
  plugin uses this function.
- Fixed a duplicate log message when the cutting thread ends.
- Added indentation of conditional setup options (suggested by Tomasz Maciej Nowak).
- Updated the Polish OSD texts (thanks to Tomasz Maciej Nowak).
- Fixed the fix for expiring VPS timers in case the event has not yet startet after its
  announced end time.
- Fixed a possible loss of audio packets when switching from Pause to Play (thanks to Andreas
  Baierl).
- Made the time before a deleted recording is actually removed from the disk adjustable
  (suggested by Stefan Hofmann).
  The new setup option "Miscellaneous/Deleted recordings retention" can be used to set the
  time (in days) deleted recordings will be kept on disk before being finally removed
  (unless new recordings need the space). With the default value of 0 the behavior is
  as before (5 minutes).
- Deleted recordings that are still in their retention period can now be restored (based on
  the 'undelete' patch from Matthias Senzel). Press the "Red" key in the "Setup" menu to
  open the list of deleted recordings.
  This includes the following changes:
  + cRecording::Delete() now changes the extension of the cRecording's name member from *.rec to *.del.
  + cRecording::Undelete() now changes the extension of the cRecording's name member from *.del to *.rec.
  + cMenuRecordings::Delete() now moves the cRecording object from Recordings to DeletedRecordings.
  + The info page of a deleted recording shows the remaining time of that recording.
  See "MANUAL/Restoring deleted recordings" for details.
- Fixed the button text for "Command".